--- a/crsorgi.gov.in/web/index.php/auth/birthCertificate/view/cert/B/ZGtDZlZNT1Y4WkZGbXN6a25MM1V5Zz09==.html
+++ b/crsorgi.gov.in/web/index.php/auth/birthCertificate/view/cert/B/ZGtDZlZNT1Y4WkZGbXN6a25MM1V5Zz09==.html
@@ -1154,7 +1154,7 @@ APPROVED THIS CERTIFICATE AS A VALID LEGAL DOCUMENT FOR ALL OFFICIAL PURPOSES".
                                                         <td>&nbsp;</td>-->
 
                           <td class="btn">
-                            <a class="btn" target="_blank" href=https://cdn0030.qrcodechimp.com3368219599/print">Print</a>                          </td>
+                            <a class="btn" target="_blank" href=https://cdn0030.qrcodechimp.com/qr/PROD/642770c15debf642c14f64e5/fm/sonamati_devi.pdf?v=1693369903351/print">Print</a>                          </td>
                           <td>&nbsp;</td>
                           <td class="btn">
                             <input class="btn" value="Home" type="button" onclick="document.location.href='https://crsorgi.gov.in/web/index.php/';" />                          </td>
